# ska-sdp-continuum-imaging-pipeline

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  PrivateRules.mak  README.md  pyproject.toml
docs/src/: conf.py  index.rst
slurm/: csd3_icelake_cip.sh  csd3_icelake_read_tile_chunks.sh  csd3_icelake_uvw_reorder.sh
src/ska_sdp_cip/: __init__.py  invert.py  measurement_set.py  stages.py  task_metrics.py  uvw_tiling.py
src/ska_sdp_cip/apps/: pipeline_app.py  uvw_reorder_app.py  uvw_reorder_read_tile_chunks.py
src/ska_sdp_cip/uvw_tiling/: __init__.py  core.py  reorder.py  tile.py  tile_mapping.py  tiling_plan.py
src/skip/: __init__.py  measurement_set.py  stages.py
src/skip/apps/: pipeline_app.py
tests/: conftest.py  dummy_test.py  test_dask_invert_measurement_set.py  test_invert_measurement_set.py  test_measurement_set.py  test_measurement_set_chunked_read.py  test_measurement_set_partition_indices.py  test_pipeline_app.py  test_task_metrics.py  test_uvw_tiling.py
tests/data/: README.md
tests/fixtures/: dask_cluster.py  measurement_set.py
tests/uvw_tiling/: test_uvw_reordering.py
